# django-addressbook-drf

./: .gitignore  MANIFEST.in  README.rst  boot_django.py  check.py  makemigrations.py  requirements.txt  setup.cfg  setup.py
addressbook/: admin.py  forms.py  models.py  urls.py  views.py
addressbook/migrations/: 0001_initial.py  0002_alter_address_state_alter_email_type_and_more.py  0002_auto_20150618_1620.py  0003_address_latitude_address_longitude.py  0004_address_zoom_alter_address_latitude_and_more.py  0005_contact_user.py
addressbook/templates/addressbook/: add_contact.html  add_group.html  edit_contact.html  hcard.html  index.html  links.html  single_contact.html  view_contacts.html
addressbook/templatetags/: qrcode.py
addressbook_drf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_addressbook_drf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/: README.rst  requirements.txt  settings.py
example/addressbook/: urls.py
example/example/: settings.py  urls.py  wsgi.py
templates/: base.html
