[metadata]
name = django-addressbook-drf
version = 0.3.0
description = A Django app that allows users to create contact groups and contacts, as well as views for displaying a contact in hcard format, downloading a vcard for the contact, a gravatar, and a QR code.
long_description = file: README.rst
url = https://github.com/medica-im/django-addressbook
author = Ben Lee, Jérôme Pinguet
author_email = yourname@example.com
license = BSD License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0
    django-countries[pyuca]
    vobject
    django-crispy-forms
    django-taggit
    easy-thumbnails
    django-taggit-labels